<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/sd_activity_style" >

    <cn.kol.pes.widget.KoPageTitleLayoutView
        android:id="@+id/sd_common_title_view"
        style="@style/sd_common_top_bar_class_use_style" >
    </cn.kol.pes.widget.KoPageTitleLayoutView>

    <LinearLayout style="@style/sd_page_content_style" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sd_padding_common_edge_small"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" >

                <EditText
                    android:id="@+id/main_job_id_edit"
                    style="@style/sd_edit_text_style"
                    android:hint="@string/ko_title_scan_to_input_job_num"
                    android:inputType="textVisiblePassword"
                    android:singleLine="true"
                    android:layout_centerVertical="true" />

                <ImageView
                    android:paddingLeft="@dimen/sd_padding_common_edge_huge"
                    android:paddingRight="@dimen/sd_padding_common_edge_middle"
                    android:id="@+id/main_job_id_search_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ko_wip_id_search_icon_4"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <Button
                android:id="@+id/main_camera_btn_job"
                style="@style/sd_button_bottom_bar_style"
                android:layout_width="189dp"
                android:layout_height="44dp"
                android:layout_marginLeft="@dimen/sd_padding_common_edge"
                android:layout_marginRight="2dp"
                android:padding="@dimen/sd_padding_common_edge_small"
                android:text="@string/ko_title_camera_input_gong_dan" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sd_padding_common_edge_small"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/main_select_op_edit"
                style="@style/sd_text_as_edit_style"
                android:text="@string/ko_title_scan_to_input_op" />

            <Button
                android:id="@+id/main_camera_btn_op"
                style="@style/sd_button_bottom_bar_style"
                android:layout_width="189dp"
                android:layout_height="44dp"
                android:layout_marginLeft="@dimen/sd_padding_common_edge"
                android:layout_marginRight="2dp"
                android:padding="@dimen/sd_padding_common_edge_small"
                android:text="@string/ko_title_camera_input_gong_xu" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sd_padding_common_edge_middle"
        android:gravity="left|center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/sd_text_black_big_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:singleLine="true"
            android:text="@string/ko_title_operate_staff" />

        <TextView
            android:id="@+id/main_staff_name"
            style="@style/sd_text_black_big_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:singleLine="true"
            android:text="57766-朱倩倩" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:orientation="horizontal" >
        
        <LinearLayout 
            android:id="@+id/main_op_started_list_parent_layout"
            style="@style/sd_page_content_style" >

            <ListView
                android:id="@+id/main_op_started_list_list_view"
                style="@style/sd_common_list_view_style" >
            </ListView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/sd_padding_common_edge_middle"
        android:paddingLeft="@dimen/sd_padding_common_edge_small"
        android:paddingRight="@dimen/sd_padding_common_edge_small" >

        <Button
            android:id="@+id/main_start_op_btn"
            style="@style/sd_button_bottom_bar_style"
            android:text="@string/ko_title_start_op" />

        <Button
            android:id="@+id/main_end_op_btn"
            style="@style/sd_button_bottom_bar_style"
            android:text="@string/ko_title_end_op" />

        <Button
            android:id="@+id/main_search_job_btn"
            style="@style/sd_button_bottom_bar_style"
            android:text="@string/ko_title_search_job" />

        <Button
            android:id="@+id/main_check_asset_btn"
            style="@style/sd_button_bottom_bar_style"
            android:text="@string/ko_title_asset_check" />
    </LinearLayout>

</LinearLayout>